--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,5 @@
+name = "nvim-portfolio"
+pages_build_output_dir = ".vercel/output/static"
 compatibility_date = "2026-01-29"
 compatibility_flags = ["nodejs_compat"]
 
