--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "airtable": "^0.12.2",
     "cors": "^2.8.5",
-    "next": "^14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6"
   }
 }
